# cramer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  devbox.json  mkdocs.yml  pyproject.toml
conan_profiles/: gcc_debug  gcc_release
src/cpp/: hello.cpp
src/cpp/include/: pch.h
